[ci skip] Fix system lag paragraph 69c59e2ea174e880a6e85c3f4c73080b27846a51

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ba6228f",
+   "id": "34dbc9c2",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1597ac80",
+   "id": "9bc0a17d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35bc0572",
+   "id": "1a0d7fd8",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ad72a25",
+   "id": "c97d645f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc72f34",
+   "id": "cd39010e",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d60274cf",
+   "id": "b56cdedd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "068d0cc9",
+   "id": "52d5f06f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0caf15f1",
+   "id": "f66de628",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4af4be1",
+   "id": "b0935637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dd119a1",
+   "id": "201017b1",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2cc338d",
+   "id": "36a04abe",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edaf151",
+   "id": "cd72ffa1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c47267",
+   "id": "b95f180c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753929e6",
+   "id": "30417663",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eeb3ff8",
+   "id": "b52bcc4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad1067f",
+   "id": "ef85c7bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9afe61be",
+   "id": "58aa36e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0a3a31f",
+   "id": "27e93bec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a517d0d5",
+   "id": "e05b67c6",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e39bbeef",
+   "id": "ef71c21c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b20a5f",
+   "id": "f4789803",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaec902f",
+   "id": "c460181f",
    "metadata": {},
    "source": [
     "\n",
@@ -486,15 +486,15 @@
     "recording process, holidays and weekends can punctually add significant\n",
     "delay.\n",
     "\n",
-    "If the system lag is larger than the maximum feature engineering lag we want\n",
-    "to use in our feature engineering, the resulting features will have missing\n",
-    "values when deployed. More importantly, if the system lag is not handled\n",
-    "explicitly, those resulting missing values will only be present in the\n",
-    "features engineered for the deployed system but not present in the features\n",
-    "engineered to train and backtest the system before deployment.\n",
+    "If the system lag is larger than the maximum feature engineering lag, the\n",
+    "resulting features be filled with missing values once deployed. More\n",
+    "importantly, if the system lag is not handled explicitly, those resulting\n",
+    "missing values will only be present in the features computed for the\n",
+    "deployed system but not present in the features computed to train and\n",
+    "backtest the system before deployment.\n",
     "\n",
-    "This structural discrepancy will degrade the performance of the deployed\n",
-    "model compared to the performance estimated from backtesting on the\n",
+    "This structural discrepancy can severely degrade the performance of the\n",
+    "deployed model compared to the performance estimated from backtesting on the\n",
     "historical data.\n",
     "\n",
     "We will set this problem aside for now but discuss it again in a later\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0b139b",
+   "id": "d9939ea9",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b9ac44a",
+   "id": "2f71dbf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "060a6574",
+   "id": "11e5794a",
    "metadata": {},
    "source": [
     "\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1b15f1",
+   "id": "39fa2b2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1911bb2",
+   "id": "9ddb8238",
    "metadata": {},
    "source": [
     "\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ea53e0f",
+   "id": "39d49838",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810d7c34",
+   "id": "8614033e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2580ef5",
+   "id": "7d60b944",
    "metadata": {},
    "source": [
     "\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afad0d1d",
+   "id": "21c7f676",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ef286c",
+   "id": "253c2519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14378047",
+   "id": "61636c23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7663e8af",
+   "id": "a709f9d1",
    "metadata": {},
    "source": [
     "\n",
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4038553",
+   "id": "3934fc69",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93f1421d",
+   "id": "4a57e13d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ceec2e2",
+   "id": "ec6a7205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d424ff",
+   "id": "f44a748c",
    "metadata": {},
    "source": [
     "\n",
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f6ce3e1",
+   "id": "b3c9f7d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1bd4a93",
+   "id": "4495b6fa",
    "metadata": {},
    "source": [
     "\n",
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ae7da4",
+   "id": "46e713f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fddc2f4b",
+   "id": "d6a7fa79",
    "metadata": {},
    "source": [
     "\n",
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b97054ed",
+   "id": "07289a7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96872c8a",
+   "id": "23e165a3",
    "metadata": {},
    "source": [
     "\n",
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5503d4e",
+   "id": "ae451835",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ceaf0c7",
+   "id": "31406332",
    "metadata": {},
    "source": [
     "\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26790923",
+   "id": "a651319f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f698c9a4",
+   "id": "52dda82f",
    "metadata": {},
    "source": [
     "\n",
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5255e53d",
+   "id": "045eefe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aa51634",
+   "id": "79b39886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929a6244",
+   "id": "9f930e55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5082ed0c",
+   "id": "4030debf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b380b8da",
+   "id": "05c3a34b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8374052",
+   "id": "e2f3bc72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2093be38",
+   "id": "d394e2d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "666c9265",
+   "id": "a1c552cf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2221721",
+   "id": "7f951b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15a7d05",
+   "id": "8388ef01",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c3856e",
+   "id": "609b21a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ade3069",
+   "id": "c28bab83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d51be022",
+   "id": "9243038b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f8487e",
+   "id": "e689bb18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9f914a",
+   "id": "dc65de1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af7eb2bb",
+   "id": "0d44202e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf49f6e",
+   "id": "20d86557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cef4ba12",
+   "id": "bc683d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faec83fa",
+   "id": "05cba08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be53394",
+   "id": "0cab5d37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ac3d6b6",
+   "id": "0e34e5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "704748d8",
+   "id": "b1c10abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b39f8c92",
+   "id": "2c444628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56cfab24",
+   "id": "30135660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f301ae0",
+   "id": "dca6cafc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89a9689",
+   "id": "68a3fd6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64224d82",
+   "id": "7d2636cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a42fd563",
+   "id": "b61b5d86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f83a82a",
+   "id": "7c7aeecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4f1e42",
+   "id": "f912a806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02fa047a",
+   "id": "2a55feb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ee5705",
+   "id": "83901710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5eb2726",
+   "id": "ec967fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db536b7",
+   "id": "52c83e3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e13caab0",
+   "id": "d193ea2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c68f3d2",
+   "id": "b5a5f536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11801e02",
+   "id": "ba4d2590",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf4a1772",
+   "id": "23b6aed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15f76f00",
+   "id": "a4cd929c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a45a2bb4",
+   "id": "92e1ea98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83c02663",
+   "id": "f7ea8ebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b118856a",
+   "id": "0bad4e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21b16ec3",
+   "id": "7bf6421f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b818e596",
+   "id": "780788f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20715c9b",
+   "id": "2b7f422e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1daa3c",
+   "id": "d0151364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "883a15d1",
+   "id": "1c3c5e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76fc434b",
+   "id": "1f807b17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b34ed1b0",
+   "id": "f3406be8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "827b94ff",
+   "id": "0e8b22e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2376,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66951719",
+   "id": "4fd96826",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceac6177",
+   "id": "6b01e6d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b69bb3",
+   "id": "4e8b4a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2e9861",
+   "id": "dbffab0f",
    "metadata": {},
    "outputs": [],
    "source": []
