--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f5e28e0",
+   "id": "ea2dbc95",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "446c283a",
+   "id": "6de3a46e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c59d44",
+   "id": "1cb0d619",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6379cbbe",
+   "id": "d7ca06e0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cfd99ed",
+   "id": "42936091",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59fba3b4",
+   "id": "e62e5324",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6859ea7c",
+   "id": "6faa2070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b846c912",
+   "id": "17f068d9",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8634b581",
+   "id": "b970bc09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff36d0ed",
+   "id": "6603e663",
    "metadata": {},
    "source": [
     "\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f15e502",
+   "id": "bc38f3f7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a854f7c4",
+   "id": "c4880745",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3ea3c6",
+   "id": "0d294ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6070956",
+   "id": "429d885d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c6db16",
+   "id": "20737d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6575494b",
+   "id": "11b32e1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e99c47",
+   "id": "f17ac0ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d693349c",
+   "id": "2605fb00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b88a0d1",
+   "id": "a73c4b7f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d072632a",
+   "id": "3ee44b13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59c6969b",
+   "id": "b5ade189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c7464f8",
+   "id": "2236b865",
    "metadata": {},
    "source": [
     "\n",
@@ -486,15 +486,15 @@
     "recording process, holidays and weekends can punctually add significant\n",
     "delay.\n",
     "\n",
-    "If the system lag is larger than the maximum feature engineering lag we want\n",
-    "to use in our feature engineering, the resulting features will have missing\n",
-    "values when deployed. More importantly, if the system lag is not handled\n",
-    "explicitly, those resulting missing values will only be present in the\n",
-    "features engineered for the deployed system but not present in the features\n",
-    "engineered to train and backtest the system before deployment.\n",
+    "If the system lag is larger than the maximum feature engineering lag, the\n",
+    "resulting features be filled with missing values once deployed. More\n",
+    "importantly, if the system lag is not handled explicitly, those resulting\n",
+    "missing values will only be present in the features computed for the\n",
+    "deployed system but not present in the features computed to train and\n",
+    "backtest the system before deployment.\n",
     "\n",
-    "This structural discrepancy will degrade the performance of the deployed\n",
-    "model compared to the performance estimated from backtesting on the\n",
+    "This structural discrepancy can severely degrade the performance of the\n",
+    "deployed model compared to the performance estimated from backtesting on the\n",
     "historical data.\n",
     "\n",
     "We will set this problem aside for now but discuss it again in a later\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dfb5d88",
+   "id": "33ed4536",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d2972b4",
+   "id": "c83f3ea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a011991e",
+   "id": "4014c586",
    "metadata": {},
    "source": [
     "\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3011b98",
+   "id": "2dd69a0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2587e41",
+   "id": "3b707009",
    "metadata": {},
    "source": [
     "\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d282d56",
+   "id": "41ed7563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c9f1f9f",
+   "id": "88e09c86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c33a3de7",
+   "id": "bfc901d5",
    "metadata": {},
    "source": [
     "\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "590b0df4",
+   "id": "a1a0d931",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f469d5",
+   "id": "98ef23cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "200516ba",
+   "id": "55dd92d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "381262e5",
+   "id": "8f7d99f0",
    "metadata": {},
    "source": [
     "\n",
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e3e8d79",
+   "id": "a9cbde08",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aedd2f4",
+   "id": "f7849c88",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8371637",
+   "id": "2c025f0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69876540",
+   "id": "c72564c1",
    "metadata": {},
    "source": [
     "\n",
@@ -817,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b3e08d",
+   "id": "79146618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee722a57",
+   "id": "7c86c268",
    "metadata": {},
    "source": [
     "\n",
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d513b417",
+   "id": "7f0a183d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca1cc6d",
+   "id": "577de840",
    "metadata": {},
    "source": [
     "\n",
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20eae6c7",
+   "id": "8b2714a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e54f09e",
+   "id": "87b1489f",
    "metadata": {},
    "source": [
     "\n",
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da0c794",
+   "id": "fbb32545",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29492942",
+   "id": "b0fdda28",
    "metadata": {},
    "source": [
     "\n",
@@ -947,7 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1d84772",
+   "id": "0b708193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad07002",
+   "id": "611d080a",
    "metadata": {},
    "source": [
     "\n",
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f79f3bf",
+   "id": "3aa0ba1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a498371c",
+   "id": "8a5dde22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f99da95e",
+   "id": "dab87c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d48d5ff",
+   "id": "c3b81ca7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431c5017",
+   "id": "c5a94ef4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e462be",
+   "id": "726f4186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daf0e1da",
+   "id": "df003a45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12aee883",
+   "id": "0d0d35aa",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1550,7 +1550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e523e819",
+   "id": "d9e6db93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4aa645",
+   "id": "a59578c6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1584,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c75735",
+   "id": "4d615b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1db1a3a5",
+   "id": "5ccf3ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b01fb27",
+   "id": "7fc89357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55256c0b",
+   "id": "c3da37d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb8e22d",
+   "id": "3d727ff6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9debf2d4",
+   "id": "bc3eafcf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72bf7476",
+   "id": "7def581f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45fd4de0",
+   "id": "9e4c796f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1723,7 +1723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb5efac2",
+   "id": "e02dc3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86895717",
+   "id": "997b2a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd66a99a",
+   "id": "f1c95424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1765,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "558d5cf6",
+   "id": "501a3eea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "784fd745",
+   "id": "02192472",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1787,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af4f61dc",
+   "id": "fa4ad633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1804,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4eb5b49",
+   "id": "91645528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1d52cca",
+   "id": "56761af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1888,7 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40741d61",
+   "id": "405ab2c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6c9df10",
+   "id": "f55b5956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "425f3e69",
+   "id": "3d62a105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,7 +1947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71bec734",
+   "id": "0b7de770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f15ff5",
+   "id": "0ee56c97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad208b40",
+   "id": "ee99b173",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2018,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "863b275c",
+   "id": "d281e573",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16e5e343",
+   "id": "dbc4574b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "188fefc3",
+   "id": "8f708b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40a2abd5",
+   "id": "96f58eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eb664fb",
+   "id": "0e7cd682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a5b11ca",
+   "id": "591299ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5717f3",
+   "id": "ed4811b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2142,7 +2142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d1f438",
+   "id": "8600bb6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b39cfce",
+   "id": "d8f71034",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78bc4fbc",
+   "id": "d624e1c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2208,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b8139db",
+   "id": "a3a397bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2220,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b6f627d",
+   "id": "09dc3e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45212674",
+   "id": "1866641f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309a48bc",
+   "id": "b2ef9a30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,7 +2279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd585e56",
+   "id": "ca1653c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a992012",
+   "id": "a254b65f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9f9476",
+   "id": "58e77d10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0aa9b16",
+   "id": "a54d8d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2376,7 +2376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c4bb6f",
+   "id": "381f1635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876b60e3",
+   "id": "0cd5ad77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c59161",
+   "id": "a1d8c2b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2429,7 +2429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fc3d91",
+   "id": "62940d5d",
    "metadata": {},
    "outputs": [],
    "source": []
